# waffle

./: README.md  pyproject.toml  setup.cfg
tests/: test.txt  tests.py
waffle/: __init__.py  wrun.py
