[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waffle"
version = "0.1.0"
description = "Waffle's Stack Virtual Machine for learning and project."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Viethedev"}]
keywords = ["stackvm", "waffle"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/Viethedev/waffle"
"Repository" = "https://github.com/Viethedev/waffle"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
